getting the menu state OUT of the domain, into io layer